--- a/BozaPodroz.UWP/BozaPodroz.UWP.csproj
+++ b/BozaPodroz.UWP/BozaPodroz.UWP.csproj
@@ -143,6 +143,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.Permissions">
       <Version>6.0.1</Version>
     </PackageReference>
